--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.1.2
   shared_preferences: ^2.2.2
   get: ^4.6.6
+  url_launcher: ^6.2.2
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
