--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   auto_route_generator: ^7.3.2
   lottie: ^2.7.0
   flutter_device_type: ^0.4.0
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
