--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   lottie: ^2.7.0
   flutter_device_type: ^0.4.0
   loading_animation_widget: ^1.2.0+4
+  animated_notch_bottom_bar: ^1.0.1
 
 dev_dependencies:
   flutter_test:
