--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,31 @@ dependencies:
   animated_notch_bottom_bar: ^1.0.1
   calendar_date_picker2: ^0.5.3
   shimmer: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/ems_icon_nobg.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/ems_icon_nobg.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/images/ems_icon_nobg.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/ems_icon_nobg.png"
 
 flutter:
   uses-material-design: true
