--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   calendar_date_picker2: ^0.5.3
   shimmer: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  launcher_name: ^1.0.2
 
 dev_dependencies:
   flutter_test:
