--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   shimmer: ^3.0.0
   flutter_launcher_icons: ^0.13.1
   launcher_name: ^1.0.2
+  convex_bottom_bar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
