--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   launcher_name: ^1.0.2
   convex_bottom_bar: ^3.2.0
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
