--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   launcher_name: ^1.0.2
   convex_bottom_bar: ^3.2.0
   flutter_svg: ^2.0.9
+  google_maps_flutter: ^2.5.1
 
 dev_dependencies:
   flutter_test:
