--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.ems_v4"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 31 //flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
