--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   flutter_svg: ^2.0.9
   google_maps_flutter: ^2.5.1
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
