--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   google_maps_flutter: ^2.5.1
   geolocator: ^10.1.0
   geocoding: ^2.1.1
+  google_geocoding_api: ^1.4.1
 
 dev_dependencies:
   flutter_test:
