--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,6 @@ dependencies:
   url_launcher: ^6.2.2
   google_fonts: ^6.1.0
   intl: ^0.19.0
-  auto_route_generator: ^7.3.2
   lottie: ^2.7.0
   flutter_device_type: ^0.4.0
   loading_animation_widget: ^1.2.0+4
@@ -28,12 +27,15 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   flutter_svg: ^2.0.9
   geolocator: ^10.1.0
+  auto_route: ^7.8.4
+  auto_route_generator: ^7.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.1
+  build_runner: ^2.4.7
 
 flutter_launcher_icons:
   android: "launcher_icon"
