--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_svg: ^2.0.9
   geolocator: ^10.1.0
   go_router: ^13.0.1
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
