--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   geolocator: ^10.1.0
   go_router: ^13.0.1
   file_picker: ^6.1.1
+  webview_flutter: ^4.4.4
 
 dev_dependencies:
   flutter_test:
