--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   get: ^4.6.6
   url_launcher: ^6.2.2
   google_fonts: ^6.1.0
-  intl: ^0.19.0
+  intl: 0.18.1
   auto_route_generator: ^7.3.2
   lottie: ^2.7.0
   flutter_device_type: ^0.4.0
@@ -30,6 +30,7 @@ dependencies:
   geolocator: ^10.1.0
   go_router: ^13.0.1
   file_picker: ^6.1.1
+  local_auth: ^2.1.8
   webview_flutter: ^4.4.4
 
 dev_dependencies:
