--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   file_picker: ^6.1.1
   local_auth: ^2.1.8
   webview_flutter: ^4.4.4
+  pinput: ^3.0.1
 
 dev_dependencies:
   flutter_test:
