forgot password otp mail

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   local_auth: ^2.1.8
   webview_flutter: ^4.4.4
   pinput: ^3.0.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
