--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   local_auth: ^2.1.8
   pinput: ^3.0.1
   image_picker: ^1.0.7
+  firebase_messaging: ^14.7.10
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
