--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^1.0.7
   firebase_messaging: ^14.7.10
   firebase_core: ^2.24.2
+  store_version_checker: ^1.0.1
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
