fix error handling and removing getMaterialApp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "pinput",
         "prograssive",
         "rafiki",
+        "Restday",
         "Starmall",
         "tabbar",
         "textblack",
