fix go router migration and error handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "cSpell.words": [
         "Clockin",
         "clockout",
+        "currentpin",
         "EDSA",
         "Getx",
         "isclockin",
