--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   store_version_checker: ^1.0.1
   geolocator: ^11.0.0
   provider: ^6.1.2
+  connectivity_plus: ^6.0.1
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
