--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,14 @@ target 'Runner' do
 end
 
 post_install do |installer|
+  # fix xcode 15 DT_TOOLCHAIN_DIR - remove after fix officially - https://github.com/CocoaPods/CocoaPods/issues/12065
+  installer.aggregate_targets.each do |target|
+    target.xcconfigs.each do |variant, xcconfig|
+      xcconfig_path = target.client_root + target.xcconfig_relative_path(variant)
+      IO.write(xcconfig_path, IO.read(xcconfig_path).gsub("DT_TOOLCHAIN_DIR", "TOOLCHAIN_DIR"))
+    end
+  end
+
   installer.pods_project.targets.each do |target|
     if target.name == "geolocator_apple"
       target.build_configurations.each do |config|
@@ -47,3 +55,4 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
   end
 end
+
