--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   get: ^4.6.6
   url_launcher: ^6.2.2
   google_fonts: ^6.1.0
-  intl: 0.18.1
-  lottie: ^2.7.0
+  intl: ^0.19.0
+  lottie: ^3.1.0
   flutter_device_type: ^0.4.0
   loading_animation_widget: ^1.2.0+4
   calendar_date_picker2: ^0.5.3
@@ -26,10 +26,10 @@ dependencies:
   launcher_name: ^1.0.2
   convex_bottom_bar: ^3.2.0
   flutter_svg: ^2.0.9
-  go_router: ^13.2.1
-  file_picker: ^6.1.1
+  go_router: ^14.0.1
+  file_picker: ^8.0.0+1
   local_auth: ^2.1.8
-  pinput: ^3.0.1
+  pinput: ^4.0.0
   image_picker: ^1.0.7
   firebase_messaging: ^14.7.10
   firebase_core: ^2.24.2
@@ -37,6 +37,8 @@ dependencies:
   geolocator: ^11.0.0
   provider: ^6.1.2
   connectivity_plus: ^6.0.1
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
@@ -44,6 +46,9 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^3.0.1
+  build_runner: ^2.4.9
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
