change schedule request ui

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "clockout",
         "currentpin",
         "EDSA",
+        "Flexi",
         "Getx",
         "isclockin",
         "Listview",
