--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Flexi",
         "Getx",
         "isclockin",
+        "Laravel",
         "Listview",
         "LTRB",
         "originlat",
