--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "currentpin",
         "EDSA",
         "Flexi",
+        "fullname",
         "Getx",
         "isclockin",
         "Laravel",
