--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   geolocator: ^11.0.0
   provider: ^6.1.2
   connectivity_plus: ^6.0.1
+  web_socket_channel: ^2.4.3
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
