fix and remove print comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,12 @@
         "Clockin",
         "clockout",
         "currentpin",
+        "dtrs",
         "EDSA",
         "Flexi",
         "fullname",
         "Getx",
+        "globallandexchange",
         "isclockin",
         "Laravel",
         "Listview",
