--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   connectivity_plus: ^6.0.1
   web_socket_channel: ^2.4.3
+  rxdart: ^0.27.7
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
