--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   connectivity_plus: ^6.0.1
   web_socket_channel: ^2.4.3
   rxdart: ^0.27.7
+  multi_dropdown: ^2.1.4
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
