--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   web_socket_channel: ^2.4.3
   rxdart: ^0.27.7
   multi_dropdown: ^2.1.4
+  open_file: ^3.3.2
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
