--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   rxdart: ^0.27.7
   multi_dropdown: ^2.1.4
   open_file: ^3.3.2
+  flutter_cache_manager: ^3.3.1
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
