fix current schedule in change schedule form

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "prograssive",
         "rafiki",
         "Restday",
+        "sched",
         "Starmall",
         "tabbar",
         "textblack",
